<resources>
    <string name="app_name">Arpsy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="art_image">Art image</string>
    <string name="search_for_art">Search for art</string>
    <string name="search">Search</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log in</string>
    <string name="register_here">Register here</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="enter_nickname">Enter nickname</string>
    <string name="register">Register</string>
    <string name="search_for_users">Search for users</string>
    <string name="home">Home</string>
    <string name="search1">Search</string>
    <string name="favorites">Favorites</string>
    <string name="search_users">Search Users</string>
    <string name="profile">Profile</string>
    <string name="home_text">Welcome to your own Art retrieval app. Where you can add your favorite art to a list. You can also search for other users and check out their favorites.</string>
</resources>
