<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nickname_register"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_nickname"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/nickname_register"
        android:id="@+id/email_register"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/password_register"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_below="@+id/email_register" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/password2_register"
        android:hint="@string/enter_password_again"
        android:inputType="textPassword"
        android:layout_below="@+id/password_register"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password2_register"
        android:text="@string/register"
        android:id="@+id/registerbutton"/>
</RelativeLayout>