<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/email_login"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_login"
        android:id="@+id/password_login"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_login"
        android:text="@string/register_here"
        android:layout_centerHorizontal="true"
        android:id="@+id/register_textview"/>
    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_textview"
        android:text="@string/log_in"/>
</RelativeLayout>